# vv

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
src/vv/: __init__.py  __main__.py  audio.py  cli.py
src/vv/backends/: __init__.py  faster.py  mlx.py
tests/: __init__.py  test_cli.py
